Renamed playbook.yml to site.yml
Also added xorg-xinit to the pacman role

--- a/roles/pacman/tasks/main.yml
+++ b/roles/pacman/tasks/main.yml
@@ -20,6 +20,7 @@
   pacman: name={{ item }} state=present
   with_items:
     - xorg-server
+    - xorg-xinit
     - xf86-input-synaptics
     - redshift
 
