Added systemd task for autologin
Removed pathogen.vim. Not using any vim plugins right now.

--- a/roles/pacman/tasks/main.yml
+++ b/roles/pacman/tasks/main.yml
@@ -65,4 +65,10 @@
     - ttf-hack
     - ttf-liberation
     - noto-fonts
+
+- name: Install power-saving tools
+  pacman: name={{ item }} state=present
+  with_items:
+    - thermald
+    - tlp
 ...
