Changed task names
Removed with_items from pacman role. Using lists of packages
instead.

--- a/roles/local-user/tasks/main.yml
+++ b/roles/local-user/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # Font configuration
-- name: Ensure fontconfig directory exists
+- name: Ensuring fontconfig directory exists
   file:
     path: '{{ font_conf_dir }}'
     state: directory
