Create the SSH directory before symlinking the config

--- a/roles/local-user/tasks/main.yml
+++ b/roles/local-user/tasks/main.yml
@@ -80,6 +80,10 @@
   tags: console, xorg
 
 # SSH configuration
+- name: Ensuring SSH configuration directory exists
+  file: path='{{ ansible_env.HOME }}/.ssh' state=directory
+  tags: console, ssh
+
 - name: Setting .ssh/config
   file:
     src: '{{ files_dir }}/ssh/config'
