--- a/roles/local-user/tasks/main.yml
+++ b/roles/local-user/tasks/main.yml
@@ -81,7 +81,7 @@
 
 # SSH configuration
 - name: Ensuring SSH configuration directory exists
-  file: path='{{ ansible_env.HOME }}/.ssh' state=directory
+  file: path='{{ ansible_env.HOME }}/.ssh/sockets' state=directory
   tags: console, ssh
 
 - name: Setting .ssh/config
