Added gwenview and spectacle to default package list

--- a/roles/pacman/tasks/main.yml
+++ b/roles/pacman/tasks/main.yml
@@ -43,6 +43,8 @@
       - systemsettings
       - user-manager
       - kde-gtk-config
+      - gwenview
+      - spektacle
 
 - name: Installing KDE applications
   pacman: name={{ item }} state=present
