--- a/roles/pacman/tasks/main.yml
+++ b/roles/pacman/tasks/main.yml
@@ -44,7 +44,7 @@
       - user-manager
       - kde-gtk-config
       - gwenview
-      - spektacle
+      - spectacle
 
 - name: Installing KDE applications
   pacman: name={{ item }} state=present
