Made changes to the mkinicpio config and preset files
Also, added the plasma-wayland-session and linux-lts to
the list of packages

--- a/roles/config/handlers/main.yml
+++ b/roles/config/handlers/main.yml
@@ -1,4 +1,7 @@
 ---
 - name: update initramfs
   command: /usr/bin/mkinitcpio -p linux
+
+- name: update lts initramfs
+  command: /usr/bin/mkinitcpio -p linux-lts
 ...
