--- a/roles/pacman/tasks/main.yml
+++ b/roles/pacman/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Upgrading System
+  pacman: update_cache=yes upgrade=yes
+
 - name: Installing reflector
   pacman: name=reflector state=present
 
@@ -10,11 +13,8 @@
   check_mode: no
 
 - name: Updating the pacman mirrorlist
-  command: /usr/bin/reflector -l 20 -p http --sort rate --save /etc/pacman.d/mirrorlist -c IN
+  command: /usr/bin/reflector -l 20 -p http --sort rate --save /etc/pacman.d/mirrorlist -c CA
   when: output.rc != 0
-
-- name: Upgrading System
-  pacman: update_cache=yes upgrade=yes
 
 - name: Installing xorg server 
   pacman: name={{ item }} state=present
@@ -35,6 +35,7 @@
   with_items:
       - plasma-desktop
       - plasma-workspace
+      - plasma-wayland-session
       - plasma-pa
       - plasma-nm
       - breeze
@@ -78,4 +79,7 @@
 
 - name: Installing KeePassXC
   pacman: name=keepassxc state=present
+
+- name: Installing Linux LTS kernel
+  pacman: name=linux-lts state=present
 ...
