--- a/roles/config/files/arch-lts.conf
+++ b/roles/config/files/arch-lts.conf
@@ -2,4 +2,4 @@ title	ArchLinux-LTS
 linux	/vmlinuz-linux-lts
 initrd	/intel-ucode.img
 initrd	/initramfs-linux-lts.img
-options	cryptdevice=UUID=ad5d66d7-8150-4935-88ba-be23eef4851a:cryptroot root=/dev/mapper/cryptroot rw scsi_mod.use_blk_mq=1
+options	cryptdevice={insert_uuid}:cryptroot root=/dev/mapper/cryptroot rw scsi_mod.use_blk_mq=1
